fix(guess-the-word): set border bottom to tab nav links instead of tab nav
it can cause a trimmed bottom border if tab nav overflows

--- a/vanilla/guess-the-word/src/styles/tabs.css
+++ b/vanilla/guess-the-word/src/styles/tabs.css
@@ -6,15 +6,6 @@
 
   padding: 0;
 }
-.tab-nav::before {
-  content: "";
-  position: absolute;
-  bottom: 0;
-
-  width: 100%;
-  height: 3px;
-  background-color: var(--tab-nav-bottom-border, var(--_bottom-border));
-}
 .tab-nav__link {
   position: relative;
   display: flex;
@@ -23,6 +14,7 @@
 
   background-color: transparent;
   border: none;
+  border-bottom: 3px solid var(--tab-item-highlight, var(--_bottom-border));
   border-radius: 12px 12px 0 0;
   outline: none;
   padding: 0.5em 1em;
@@ -30,21 +22,11 @@
   font-size: 1.125rem;
   font-weight: var(--tab-link-font-weight);
 
-  transition: background-color 0.3s ease;
+  transition:
+    background-color 0.3s ease,
+    border-color 0.2s ease;
 
   --icon-size: 1.25em;
-}
-.tab-nav__link::after {
-  content: "";
-  position: absolute;
-  bottom: 0;
-  left: 0;
-
-  width: 100%;
-  height: 3px;
-  background-color: var(--tab-item-highlight);
-
-  transition: background-color 0.2s ease;
 }
 .tab-nav__link[aria-selected="true"] {
   --tab-item-highlight: var(--primary);
